# automl-itmo-insurance

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml
.github/workflows/: docs.yml
.kaggle/: kaggle_example.json
docs/: mkdocs.yml  mkdocs_copy_figures_hook.py
docs/docs/: index.md
docs/docs/references/: dataset.md
notebooks/target_analysis/: target_analysis_v1.ipynb
src/: config.py  dataset.py  plots.py  utils.py
src/dataset/: get_dataset.py  preprocess_dataset.py
