[tool.poetry]
name = "auto-ml-itmo-insurance-regression"
version = "0.1.0"
description = ""
authors = ["Victor Barbarich <victor.barbarich@dif.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = "^3.58.0"
loguru = "^0.7.3"
kaggle = "^1.6.17"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
