[tool.poetry]
name = "auto-ml-itmo-insurance-regression"
version = "0.1.0"
description = ""
authors = ["Victor Barbarich <victor.barbarich@dif.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dvc = "^3.58.0"
loguru = "^0.7.3"
kaggle = "^1.6.17"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = {extras = ["extensions"], version = "^9.5.47"}
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
markdown-exec = "^1.10.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
